[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscheduler"
version = "0.1.0"
description = "A simple Python auto scheduler for tasks"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Neutrino-102112915" }
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Neutrino-102112915/PyScheduler"
Repository = "https://github.com/Neutrino-102112915/PyScheduler"

[project.scripts]
pyscheduler = "pyscheduler.cli:main"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"" = ["*.md"]
